---
source: src/tests/mod.rs
expression: err
---
Error: semantics::multiple_initialization

  × field `x` initialized multiple times
   ╭─[main.ppl:4:9]
 3 │ 
 4 │ Point { x: 1, x: 2 }
   ·         ──┬─  ──┬─
   ·           │     ╰── repeated initialization
   ·           ╰── was firstly initialized here
   ╰────
